<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="always" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_language"
                android:icon="@drawable/ic_language"
                android:title="@string/ganti_bahasa"
                android:textColor="@color/textPrimaryLight" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/keluar_akun"
                android:textColor="@color/textPrimaryLight" />
        </menu>
    </item>

</menu>
