<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_splash"
    tools:context=".view.ui.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:paddingHorizontal="24dp"
        >

        <Button
            android:id="@+id/btnPostStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/buat_story"
            style="@style/button"
            app:layout_constraintEnd_toEndOf="@+id/etDeskripsi"
            app:layout_constraintStart_toStartOf="@+id/etDeskripsi"
            app:layout_constraintTop_toBottomOf="@+id/etDeskripsi" />

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="1"
            android:contentDescription="@string/deskripsi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/galeri_none" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/buka_kamera"
            style="@style/button"
            app:layout_constraintEnd_toStartOf="@+id/btnGaleri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imgUpload"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

        <Button
            android:id="@+id/btnGaleri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/buka_galeri"
            style="@style/button"
            app:layout_constraintEnd_toEndOf="@+id/imgUpload"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCamera"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

        <EditText
            android:id="@+id/etDeskripsi"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:autofillHints="Description"
            android:gravity="top|left"
            android:hint="@string/masukkan_deskripsi"
            android:inputType="textMultiLine"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            android:background="@drawable/stroke"
            app:layout_constraintEnd_toEndOf="@+id/imgUpload"
            app:layout_constraintStart_toStartOf="@+id/imgUpload"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera"
            tools:ignore="RtlHardcoded" />

        <ProgressBar
            android:id="@+id/progressBarAddStory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imgUpload"
            app:layout_constraintEnd_toEndOf="@+id/imgUpload"
            app:layout_constraintStart_toStartOf="@+id/imgUpload"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>